fix spacing

--- a/src/modules/physics/Sections/FirstSection/style.css
+++ b/src/modules/physics/Sections/FirstSection/style.css
@@ -186,4 +186,8 @@
         width: 120%;
         transform: translateX(-50%);
     }
+
+    .physics-types-card {
+        height: auto;
+    }
 }
